[gd_scene load_steps=8 format=3 uid="uid://d1novstb8ijb2"]

[ext_resource type="Script" path="res://addons/renik-gdscript/renik.gd" id="1_1aghp"]
[ext_resource type="Script" path="res://addons/renik-gdscript/quick_renik_setup.gd" id="1_ak3r4"]
[ext_resource type="Script" path="res://addons/renik-gdscript/renik_placement.gd" id="2_6e7rw"]
[ext_resource type="Script" path="res://addons/renik-gdscript/renik_placement_gait.gd" id="3_rnvnt"]

[sub_resource type="Resource" id="Resource_s5x0k"]
resource_name = "ForwardGait"
script = ExtResource("3_rnvnt")
speed_scalar_min = 1.0
speed_scalar_max = 0.5
ground_time = 5.0
lift_time_base = 10.0
lift_time_scalar = 5.0
apex_in_time_base = 10.0
apex_in_time_scalar = 5.0
apex_out_time_base = 5.0
apex_out_time_scalar = 5.0
drop_time_base = 5.0
drop_time_scalar = 0.0
tip_toe_distance_scalar = 1.5708
tip_toe_speed_scalar = 0.785398
tip_toe_angle_max = 1.0472
lift_vertical = 0.0
lift_vertical_scalar = 0.4
lift_horizontal_scalar = 0.7
lift_angle = 1.5708
apex_vertical = 0.0
apex_vertical_scalar = 0.1
apex_angle = 0.392699
drop_vertical = 0.0
drop_vertical_scalar = 0.05
drop_horizontal_scalar = 0.25
drop_angle = -0.392699
contact_point_ease = 0.05
contact_point_ease_scalar = 0.4
scaling_ease = 0.85

[sub_resource type="Resource" id="Resource_y3kmg"]
resource_name = "BackwardGait"
script = ExtResource("3_rnvnt")
speed_scalar_min = 0.5
speed_scalar_max = 0.75
ground_time = 5.0
lift_time_base = 5.0
lift_time_scalar = 5.0
apex_in_time_base = 10.0
apex_in_time_scalar = 5.0
apex_out_time_base = 10.0
apex_out_time_scalar = 5.0
drop_time_base = 5.0
drop_time_scalar = 5.0
tip_toe_distance_scalar = 0.0
tip_toe_speed_scalar = 0.0
tip_toe_angle_max = 0.0
lift_vertical = 0.025
lift_vertical_scalar = 0.1
lift_horizontal_scalar = 0.33
lift_angle = -0.392699
apex_vertical = 0.1
apex_vertical_scalar = 0.1
apex_angle = 0.392699
drop_vertical = 0.0
drop_vertical_scalar = 0.1
drop_horizontal_scalar = 0.25
drop_angle = 0.392699
contact_point_ease = 0.1
contact_point_ease_scalar = 0.4
scaling_ease = 0.85

[sub_resource type="Resource" id="Resource_04yc4"]
resource_name = "SidewaysGait"
script = ExtResource("3_rnvnt")
speed_scalar_min = 0.75
speed_scalar_max = 0.75
ground_time = 10.0
lift_time_base = 5.0
lift_time_scalar = 5.0
apex_in_time_base = 10.0
apex_in_time_scalar = 5.0
apex_out_time_base = 10.0
apex_out_time_scalar = 5.0
drop_time_base = 5.0
drop_time_scalar = 5.0
tip_toe_distance_scalar = 0.0
tip_toe_speed_scalar = 0.0
tip_toe_angle_max = 0.0
lift_vertical = 0.05
lift_vertical_scalar = 0.05
lift_horizontal_scalar = 0.2
lift_angle = 0.0
apex_vertical = 0.01
apex_vertical_scalar = 0.1
apex_angle = 0.392699
drop_vertical = 0.01
drop_vertical_scalar = 0.05
drop_horizontal_scalar = 0.25
drop_angle = 0.0
contact_point_ease = 0.1
contact_point_ease_scalar = 0.4
scaling_ease = 0.85

[node name="LogicContainer" type="Node3D"]
transform = Transform3D(0.898533, 0.432097, -0.077013, -0.433652, 0.84693, -0.307663, -0.067716, 0.309842, 0.948374, 0, 0, 0)
script = ExtResource("1_ak3r4")

[node name="RenIK" type="Node3D" parent="."]
transform = Transform3D(1, 9.31323e-09, 0, -6.89179e-08, 1, 2.98023e-08, -7.45058e-09, -2.98023e-08, 1, 0, 0, 0)
script = ExtResource("1_1aghp")
live_preview = true
armature_head_target = NodePath("../Targets/Head")
armature_left_hand_target = NodePath("../Targets/LeftHand")
armature_right_hand_target = NodePath("../Targets/RightHand")
armature_hip_target = NodePath("../Targets/Hips")
armature_left_foot_target = NodePath("../Targets/LeftFoot")
armature_right_foot_target = NodePath("../Targets/RightFoot")
arm_elbow_direction_offset = 1.22173
arm_upper_arm_twisting = 0.5
arm_upper_arm_twist_offset = -0.872665
arm_forearm_twisting = 0.66666
arm_forearm_twist_offset = -0.872665
arm_twist_inflection_point = 0.349066
arm_twist_overflow = 0.785398
arm_pole_offset = Quaternion(0.113039, -0.0652631, 0.495722, 0.858616)
arm_target_position_influence = Vector3(2, -1.5, -1)
arm_target_rotation_influence = 0.33
arm_shoulder_offset = Quaternion(0, 0, 0, 1)
arm_shoulder_pole_offset = Quaternion(0, 0, 0, 1)
leg_thigh_twisting = 0.25
leg_lower_leg_twisting = 0.25
leg_lower_leg_twist_offset = 3.14159
leg_twist_overflow = 0.785398
leg_pole_offset = Quaternion(0, 0, 1, -4.37114e-08)
leg_target_rotation_influence = 0.5
torso_spine_curve = Vector3(0, 15, -15)
torso_upper_spine_stiffness = 0.5
torso_lower_spine_stiffness = 0.5
torso_spine_twist = 1.0

[node name="RenIKFootPlacement" type="Node3D" parent="."]
transform = Transform3D(1, 1.11759e-08, 0, -6.70552e-08, 1, 0, -7.45058e-09, 0, 1, 0, 0, 0)
script = ExtResource("2_6e7rw")
forward_gait = SubResource("Resource_s5x0k")
backward_gait = SubResource("Resource_y3kmg")
sideways_gait = SubResource("Resource_04yc4")
left_hip_offset = Vector3(0.109996, -0.149882, -0.047796)
right_hip_offset = Vector3(-0.109996, -0.149882, -0.047796)
live_preview = true
enable_hip_placement = true
armature_head_target = NodePath("../Targets/Head")
armature_hip_target = NodePath("../Targets/Hips")
armature_left_foot_target = NodePath("../Targets/LeftFoot")
armature_right_foot_target = NodePath("../Targets/RightFoot")

[node name="Targets" type="Node" parent="."]

[node name="Head" type="Marker3D" parent="Targets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.34462e-09, 0.940317, 0.0437589)

[node name="Hips" type="Marker3D" parent="Targets"]
transform = Transform3D(1, -1.59871e-09, 1.0948e-09, 1.61109e-09, 0.999935, -0.0114058, -1.0765e-09, 0.0114058, 0.999935, -3.34462e-09, 0.940317, 0.0437589)

[node name="LeftHand" type="Marker3D" parent="Targets"]
transform = Transform3D(-1.62921e-07, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -1.62921e-07, 7.12149e-15, 0.454643, 0.8601, 0.00588896)

[node name="RightHand" type="Marker3D" parent="Targets"]
transform = Transform3D(1.31134e-07, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, 1.31134e-07, -5.73206e-15, -0.454643, 0.8601, 0.00588913)

[node name="LeftFoot" type="Marker3D" parent="Targets"]
transform = Transform3D(-1, 0, 0, 0, -0.382684, 0.92388, 0, 0.92388, 0.382684, 0.109946, -1.20937, -0.00402058)

[node name="RightFoot" type="Marker3D" parent="Targets"]
transform = Transform3D(-1, 0, 0, 0, -0.382684, 0.92388, 0, 0.92388, 0.382684, -0.109946, -1.20937, -0.00402058)

[node name="BoneAttachment3D" type="Node3D" parent="Targets"]
transform = Transform3D(-1, 0, 0, 0, 0, 1, 0, 1, 0, 0.16152, 0.0643738, 0.00805585)

[node name="BoneAttachment3D2" type="Node3D" parent="Targets"]
transform = Transform3D(-1, 0, 0, 0, 0, 1, 0, 1, 0, -0.161519, 0.0643737, 0.00805577)

[node name="BoneAttachment3D3" type="Node3D" parent="Targets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.78326e-09, 0.645653, 0.0411277)
